2005-12-18  jrandom     * Added a standalone runner for the I2PSnark web ui (build with the       command "ant i2psnark", unzip i2psnark-standalone.zip somewhere, run       with "java -jar launch-i2psnark.jar", and go to http://localhost:8002/).     * Further I2PSnark error handling 2005-12-17  jrandom     * Let multiuser accounts authorize themselves to access the remote       functionality again (thanks Ch0Hag!)     * Adjust the JVM heap size to 128MB for new installs (existing users can       accomplish this by editing wrapper.config, adding the line       "wrapper.java.maxmemory=128", and then doing a full shutdown and startup       of the router).  This is relevent for heavy usage of I2PSnark in the       router console.
Monotone-Parent: b4774b19ffd6c25d17044dacdac18348624c6889
Monotone-Revision: 83cb7bfc7fe61db216d833fe683b8b2d4da70b40

Monotone-Author: jrandom
Monotone-Date: 2005-12-18T05:52:19
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -57,7 +57,10 @@ wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
 #wrapper.java.initmemory=4
 
 # Maximum Java Heap Size (in MB)
-#wrapper.java.maxmemory=32
+# The JVM's default is 64MB, and I2P can work fine in that, but to handle
+# lots of I2PSnark activity in the same JVM, increasing the default max heap
+# size should help.  Feel free to reduce this if not using I2PSnark in the jvm
+wrapper.java.maxmemory=128
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=net.i2p.router.Router
