* 2005-12-22  0.6.1.8 released 2005-12-22  jrandom     * Bundle the standalone I2PSnark launcher in the installer and update       process (launch as "java -jar launch-i2psnark.jar", viewing the       interface on http://localhost:8002/)     * Don't autostart swarming torrents by default so that you can run a       standalone I2PSnark from the I2P install dir and not have the embedded       I2PSnark autolaunch the torrents that the standalone instance is running     * Fixed a rare streaming lib bug that could let a blocking call wait       forever.
Monotone-Parent: d641070f55ce5225259d578af8cba17d9dd18ca4
Monotone-Revision: bde2522834cbfecaf3c624bc7d3b0ec91d7ccb40

Monotone-Author: jrandom
Monotone-Date: 2005-12-22T12:49:09
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_8

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -57,7 +57,8 @@
         <delete dir="./dist" />
         <mkdir dir="./dist" />
         <copy file="./build/launch-i2psnark.jar" tofile="./dist/launch-i2psnark.jar" />
-        <copy file="../i2psnark.war" tofile="./dist/i2psnark.war" />
+        <mkdir dir="./dist/webapps" />
+        <copy file="../i2psnark.war" tofile="./dist/webapps/i2psnark.war" />
         <mkdir dir="./dist/lib" />
         <copy file="../../../core/java/build/i2p.jar" tofile="./dist/lib/i2p.jar" />
         <copy file="../../jetty/jettylib/commons-el.jar" tofile="./dist/lib/commons-el.jar" />
