2006-01-08  jrandom     * First pass of the new blog interface, though without much of the useful       customization features (coming soon)
Monotone-Parent: f99bad09b04aa7a04baf443d5ebbc8e8fd13a3cc
Monotone-Revision: 3333ce84532d439810be7a73664eb911cf6c660a

Monotone-Author: jrandom
Monotone-Date: 2006-01-08T20:54:36
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/web.xml
+++ b/apps/syndie/jsp/web.xml
@@ -70,6 +70,16 @@
     </servlet>
      
     <servlet>
+     <servlet-name>net.i2p.syndie.web.BlogConfigServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.BlogConfigServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
+     <servlet-name>net.i2p.syndie.web.ViewBlogServlet</servlet-name>
+     <servlet-class>net.i2p.syndie.web.ViewBlogServlet</servlet-class>
+    </servlet>
+     
+    <servlet>
 	 <servlet-name>net.i2p.syndie.UpdaterServlet</servlet-name>
 	 <servlet-class>net.i2p.syndie.UpdaterServlet</servlet-class>
          <load-on-startup>1</load-on-startup>
@@ -134,6 +144,14 @@
     <servlet-mapping> 
       <servlet-name>net.i2p.syndie.web.ViewBlogsServlet</servlet-name>
       <url-pattern>/blogs.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.BlogConfigServlet</servlet-name>
+      <url-pattern>/configblog.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping> 
+      <servlet-name>net.i2p.syndie.web.ViewBlogServlet</servlet-name>
+      <url-pattern>/blog.jsp</url-pattern>
     </servlet-mapping>
     
     <session-config>
