2005-01-10  jrandom     * Added the per-post list of attachments/blogs/etc to the blog view in       Syndie (though this does not yet include comments or some further       refinements)     * Have the I2P shortcut launch i2p.exe instead of i2psvc.exe on windows,       removing the dox box (though also removes the restart functionality...)     * Give the i2p.exe the correct java.library.path to support the systray       dll (thanks Bobcat, Sugadude, anon!)
Monotone-Parent: d7c87eb702d69b65fe33db3b1d2131c707b0e9f3
Monotone-Revision: 35bcea0041f46ca93d22542572fefd1685006807

Monotone-Author: jrandom
Monotone-Date: 2006-01-10T06:59:07
Monotone-Branch: i2p.i2p

--- a/apps/syndie/java/build.xml
+++ b/apps/syndie/java/build.xml
@@ -9,6 +9,7 @@
     </target>
     <target name="compile">
         <mkdir dir="./build" />
+        <delete dir="./build/obj" />
         <mkdir dir="./build/obj" />
         <javac 
             srcdir="./src"
@@ -32,6 +33,8 @@
         <ant target="war" />
     </target>
     <target name="war" depends="builddep, compile, precompilejsp"> 
+	<delete file="../syndie.war" />
+	<delete dir="./tmpwar" />
         <mkdir dir="./tmpwar" />
         <copy file="../../jdom/jdom.jar" tofile="./tmpwar/jdom.jar" />
         <copy file="../../rome/rome-0.7.jar" tofile="./tmpwar/rome-0.7.jar" />
@@ -157,6 +160,7 @@
     <target name="clean">
         <delete dir="./build" />
         <delete dir="./dist" />
+        <delete dir="../jsp/WEB-INF/classes" />
         <delete file="./syndie-standalone.zip" />
     </target>
     <target name="cleandep" depends="clean">
