2006-03-16  jrandom     * Integrate basic hooks for jrobin (http://jrobin.org) into the router       console.  Selected stats can be harvested automatically and fed into       in-memory RRD databases, and those databases can be served up either as       PNG images or as RRDtool compatible XML dumps (see oldstats.jsp for       details).  A base set of stats are harvested by default, but an       alternate list can be specified by setting the 'stat.summaries' list on       the advanced config.  For instance:       stat.summaries=bw.recvRate.60000,bw.sendRate.60000     * HTML tweaking for the general config page (thanks void!)     * Odd NPE fix (thanks Complication!)
Monotone-Parent: e58d457e0a9fdc993fc6e0820c8557ffd7de7283
Monotone-Revision: bb8977e08c7a70076de7e13b8f3c0590762db567

Monotone-Author: jrandom
Monotone-Date: 2006-03-16T21:45:17
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -25,6 +25,7 @@
                 <pathelement location="../../systray/java/build/systray.jar" />
                 <pathelement location="../../systray/java/lib/systray4j.jar" />
                 <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" /> <!-- we dont care if we're not on win32 -->
+                <pathelement location="../../jrobin/jrobin-1.4.0.jar" />
             </classpath>
         </javac>
     </target>
@@ -34,6 +35,12 @@
                 <attribute name="Class-Path" value="i2p.jar router.jar" />
             </manifest>
         </jar>
+        
+        <delete dir="./tmpextract" />
+        <unjar src="../../jrobin/jrobin-1.4.0.jar" dest="./tmpextract" />
+        <jar destfile="./build/routerconsole.jar" basedir="./tmpextract" update="true" />
+        <delete dir="./tmpextract" />
+        
         <ant target="war" />
     </target>
     <target name="war" depends="precompilejsp">
@@ -60,6 +67,7 @@
                 <pathelement location="../../systray/java/lib/systray4j.jar" />
                 <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" />
                 <pathelement location="build/routerconsole.jar" />
+                <pathelement location="build/" />
                 <pathelement location="../../../router/java/build/router.jar" />
                 <pathelement location="../../../core/java/build/i2p.jar" />
             </classpath>
@@ -86,6 +94,7 @@
                 <pathelement location="../../systray/java/lib/systray4j.jar" />
                 <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" />
                 <pathelement location="build/routerconsole.jar" />
+                <pathelement location="build" />
                 <pathelement location="../../../router/java/build/router.jar" />
                 <pathelement location="../../../core/java/build/i2p.jar" />
             </classpath>
