2007-02-13  jrandom     * Tell our peers about who we know in the floodfill netDb every       6 hours or so, mitigating the situation where peers lose track       of floodfill routers.     * Disable the Syndie updater (people should use the new Syndie,       not this one)     * Disable the eepsite tunnel by default
Monotone-Parent: e6d2e7f71d79995ba8b86e1522618d5727780f08
Monotone-Revision: f16fe4736e6018eda160866818ad309c31f56058

Monotone-Author: jrandom
Monotone-Date: 2007-02-14T04:33:36
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -55,7 +55,7 @@ tunnel.3.i2cpHost=127.0.0.1
 tunnel.3.i2cpPort=7654
 tunnel.3.option.inbound.nickname=eepsite
 tunnel.3.option.outbound.nickname=eepsite
-tunnel.3.startOnLoad=true
+tunnel.3.startOnLoad=false
 
 # postman's SMTP server - see www.postman.i2p
 tunnel.4.description=smtp server
