2007-05-06  Complication     * Fix the build.xml file, so the preppkg build target won't try copying files       which became deprecated with the old Syndie (thank for alerting, itsu!)
Monotone-Parent: a43a49b1fddf295ef3329b4444209e0280578f24
Monotone-Revision: 3aa957db2689379a1f979f0db06b8450fc560fae

Monotone-Author: complication
Monotone-Date: 2007-05-06T19:52:39
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -197,7 +197,7 @@
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/systray.jar" todir="pkg-temp/lib" />
-        <copy file="build/sucker.jar" todir="pkg-temp/lib" />
+        <!-- <copy file="build/sucker.jar" todir="pkg-temp/lib" /> -->
         <copy file="build/i2psnark.jar" todir="pkg-temp/lib/" />
         <copy file="i2p.exe" todir="pkg-temp/" failonerror="false" />
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
