* news.xml: make links relative * wrapper.config: Add some comments * checklist.txt: Add some things
Monotone-Parent: 921f5765850ff0bdd8eddefa0bbb9456aa6515bc
Monotone-Revision: e4173490647018345d50527362f0a1331b0507c2

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-05T03:14:18
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -1,5 +1,11 @@
 #********************************************************************
 # Wrapper Properties
+#
+# WARNING - for any changes to take effect, you must completely
+# stop the router and the wrapper. Clicking 'Restart' on your
+# router console will NOT reread this file! You must
+# click "Shutdown", wait 11 minutes, then start i2p.
+#
 #********************************************************************
 # Java Application
 wrapper.java.command=java
@@ -60,6 +66,13 @@ wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
 # The JVM's default is 64MB, and I2P can work fine in that, but to handle
 # lots of I2PSnark activity in the same JVM, increasing the default max heap
 # size should help.  Feel free to reduce this if not using I2PSnark in the jvm
+# High-bandwidth routers may need to increase to 256 or more.
+#
+# WARNING - for any changes to take effect, you must completely
+# stop the router and the wrapper. Clicking 'Restart' on your
+# router console will NOT reread this file! You must
+# click "Shutdown", wait 11 minutes, then start i2p.
+#
 wrapper.java.maxmemory=128
 
 # Application parameters.  Add parameters as needed starting from 1
