* build.xml: Add some apps to javadoc     * checklist.txt: Add some things     * news.xml: Minor edit     * runplain.sh: Add some comments
Monotone-Parent: e4173490647018345d50527362f0a1331b0507c2
Monotone-Revision: cdaa50ea36f9f154bb79868667460040d831730e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-06T16:38:23
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -138,6 +138,9 @@
                 <pathelement location="apps/i2ptunnel/java/src" />
                 <pathelement location="apps/systray/java/src" />
                 <pathelement location="apps/routerconsole/java/src" />
+                <pathelement location="apps/addressbook/java/src" />
+                <pathelement location="apps/i2psnark/java/src" />
+                <pathelement location="apps/sam/java/src" />
             </sourcepath>
             <classpath>
                 <pathelement location="apps/jetty/jettylib/org.mortbay.jetty.jar" />
